@@ -1,10 +1,6 @@
 What's new:
 -----------
 
-- Introduce reading passwd/group entries directly from SAM/AD, thus allowing
-  to do without /etc/passwd and /etc/group files.  Introduce /etc/nsswitch.conf
-  file to configure passwd/group handling.
-
 - Allow quoting of arguments to the CYGWIN environment variable, i.e.,
   set CYGWIN=error_start="c:\bin\someprogram -T"
 
@@ -27,3 +23,8 @@ Bug Fixes
 
 - Avoid error messages from the signal handler if we're exiting.
   Addresses: A random irc #cygwin complaint.
+
+- Fix return value from getgrouplist function to behave like glibc.
+
+- Fix initialization of open_memstream which could lead to dropping the
+  entire string.
