@@ -27,6 +27,16 @@
 	(fhandler_console::cursor_get): Ditto.
 	(fhandler_console::write): Fix "reverse index".
 
+2014-02-20  Corinna Vinschen  <corinna@vinschen.de>
+
+	* grp.cc (getgrouplist): Fix previous fix so ret is only set to ngroups
+	if ngroups isn't too small.
+
+2014-02-20  Corinna Vinschen  <corinna@vinschen.de>
+
+	* grp.cc (get_groups): Don't add gid to list if it's ILLEGAL_GID.
+	(getgrouplist): Return number of groups, just like glibc.
+
 2014-02-15  Christopher Faylor  <me.cygwin2014@cgf.cx>
 
 	* DevNotes: Add entry cgf-000024.
